# FunDEM

./: .bash_history  .gitignore  README.md
FunDEM/: CMakeLists.txt  README.md  buildLevelSetParticle.h  damBreak2.cpp  externalForceTorque.cu  ice-struct.cpp  levelSetParticleFall.cpp  pointCloudGeneration.h
FunDEM/DEMSourse/: bondedParticleBeam.cpp  elasticBounce.cpp  externalForceTorque.h  levelSetParticle.cpp  levelSetParticleFall.cpp
FunDEM/DEMSourse/kernel/: CMakeLists.txt  DEMSPHSolver.h  LSDEMSolver.h  WCSPHSolver.h
FunDEM/DEMSourse/kernel/CUDAKernelFunction/: WCSPHIntegrationKernel.cuh  ballIntegrationKernel.cu  ballNeighborSearchKernel.cu  contactKernel.cu  levelSetParticleContactDetectionKernel.cu  levelSetParticleIntegrationKernel.cuh  neighborSearchKernel.cu  neighborSearchKernel.cuh  wallIntegrationKernel.cu
FunDEM/DEMSourse/kernel/CUDAKernelFunction/myUtility/: interaction.h  myQua.h  myVec.h  particle.h
FunDEM/apps/tutorial-bondedBalls/: bondedParticleBeam.cpp  externalForceTorque.cu  externalForceTorque.cuh  ice-struct.cpp
FunDEM/apps/tutorial-bondedLevelSetParticles/: bondedLevelSetParticles.cpp  globalDamping.cuh
FunDEM/kernel/: CMakeLists.txt  DEMSolver.h  LSDEMSolver.h  WCSPHSolver.h  boundary.h  interaction.h  particle.h  wall.h
FunDEM/kernel/CUDAKernelFunction/: SPHNeighborSearchKernel.cu  SPHNeighborSearchKernel.cuh  WCSPHIntegrationKernel.cu  ballIntegrationKernel.cu  ballIntegrationKernel.cuh  ballNeighborSearchKernel.cu  ballNeighborSearchKernel.cuh  buildHashStartEnd.cu  contactKernel.cu  contactKernel.cuh  interactionKernel.h  levelSetParticleContactDetectionKernel.cu  levelSetParticleContactDetectionKernel.cuh  levelSetParticleIntegrationKernel.cu  neighborSearchKernel.cu  neighborSearchKernel.cuh  wallIntegrationKernel.cu  wallIntegrationKernel.cuh
FunDEM/kernel/CUDAKernelFunction/myUtility/: buildHashStartEnd.cu  buildHashStartEnd.cuh  contactParameters.h  myContactParameters.h  myHostDeviceArray.h  myQua.h  myVec.h
FunDEM/levelSetParticleAfterBonding/: LS-ParticleInteraction_0000.vtu  LS-ParticleInteraction_0001.vtu  LS-ParticleInteraction_0002.vtu  LS-ParticleInteraction_0003.vtu  LS-ParticleInteraction_0004.vtu  LS-ParticleInteraction_0005.vtu  LS-ParticleInteraction_0006.vtu  LS-ParticleInteraction_0007.vtu  LS-ParticleInteraction_0008.vtu  LS-ParticleInteraction_0009.vtu  LS-ParticleInteraction_0010.vtu  LS-ParticleInteraction_0011.vtu  LS-ParticleInteraction_0012.vtu  LS-ParticleInteraction_0013.vtu  LS-ParticleInteraction_0014.vtu  LS-ParticleInteraction_0015.vtu  LS-ParticleInteraction_0016.vtu  LS-ParticleInteraction_0017.vtu  LS-ParticleInteraction_0018.vtu  LS-ParticleInteraction_0019.vtu  LS-ParticleInteraction_0020.vtu  LS-ParticleInteraction_0021.vtu  LS-ParticleInteraction_0022.vtu  LS-ParticleInteraction_0023.vtu  LS-ParticleInteraction_0024.vtu  LS-ParticleInteraction_0025.vtu  LS-ParticleInteraction_0026.vtu  LS-ParticleInteraction_0027.vtu  LS-ParticleInteraction_0028.vtu  LS-ParticleInteraction_0029.vtu  LS-ParticleInteraction_0030.vtu  LS-ParticleInteraction_0031.vtu  LS-ParticleInteraction_0032.vtu  LS-ParticleInteraction_0033.vtu  LS-ParticleInteraction_0034.vtu  LS-ParticleInteraction_0035.vtu  LS-ParticleInteraction_0036.vtu  LS-ParticleInteraction_0037.vtu  LS-ParticleInteraction_0038.vtu  LS-ParticleInteraction_0039.vtu  (+20 more)
FunDEM/levelSetParticleBeforeBonding/: LS-ParticleInteraction_0000.vtu  LS-ParticleInteraction_0001.vtu  LS-ParticleInteraction_0002.vtu  LS-ParticleInteraction_0003.vtu  LS-ParticleInteraction_0004.vtu  LS-ParticleInteraction_0005.vtu  LS-ParticleInteraction_0006.vtu  LS-ParticleInteraction_0007.vtu  LS-ParticleInteraction_0008.vtu  LS-ParticleInteraction_0009.vtu  LS-ParticleInteraction_0010.vtu  LS-ParticleInteraction_0011.vtu  LS-ParticleInteraction_0012.vtu  LS-ParticleInteraction_0013.vtu  LS-ParticleInteraction_0014.vtu  LS-ParticleInteraction_0015.vtu  LS-ParticleInteraction_0016.vtu  LS-ParticleInteraction_0017.vtu  LS-ParticleInteraction_0018.vtu  LS-ParticleInteraction_0019.vtu  LS-ParticleInteraction_0020.vtu  LS-ParticleInteraction_0021.vtu  LS-ParticleInteraction_0022.vtu  LS-ParticleInteraction_0023.vtu  LS-ParticleInteraction_0024.vtu  LS-ParticleInteraction_0025.vtu  LS-ParticleInteraction_0026.vtu  LS-ParticleInteraction_0027.vtu  LS-ParticleInteraction_0028.vtu  LS-ParticleInteraction_0029.vtu  LS-ParticleInteraction_0030.vtu  LS-ParticleInteraction_0031.vtu  LS-ParticleInteraction_0032.vtu  LS-ParticleInteraction_0033.vtu  LS-ParticleInteraction_0034.vtu  LS-ParticleInteraction_0035.vtu  LS-ParticleInteraction_0036.vtu  LS-ParticleInteraction_0037.vtu  LS-ParticleInteraction_0038.vtu  LS-ParticleInteraction_0039.vtu  (+101 more)
FunDEM/levelSetParticleFall/: LS-ParticleInteraction_0000.vtu  LS-ParticleInteraction_0001.vtu  LS-ParticleInteraction_0002.vtu  LS-ParticleInteraction_0003.vtu  LS-ParticleInteraction_0004.vtu  LS-ParticleInteraction_0005.vtu  LS-ParticleInteraction_0006.vtu  LS-ParticleInteraction_0007.vtu  LS-ParticleInteraction_0008.vtu  LS-ParticleInteraction_0009.vtu  LS-ParticleInteraction_0010.vtu  LS-ParticleInteraction_0011.vtu  LS-ParticleInteraction_0012.vtu  LS-ParticleInteraction_0013.vtu  LS-ParticleInteraction_0014.vtu  LS-ParticleInteraction_0015.vtu  LS-ParticleInteraction_0016.vtu  LS-ParticleInteraction_0017.vtu  LS-ParticleInteraction_0018.vtu  LS-ParticleInteraction_0019.vtu  LS-ParticleInteraction_0020.vtu  LS-Particle_0000.vtu  LS-Particle_0001.vtu  LS-Particle_0002.vtu  LS-Particle_0003.vtu  LS-Particle_0004.vtu  LS-Particle_0005.vtu  LS-Particle_0006.vtu  LS-Particle_0007.vtu  LS-Particle_0008.vtu  LS-Particle_0009.vtu  LS-Particle_0010.vtu  LS-Particle_0011.vtu  LS-Particle_0012.vtu  LS-Particle_0013.vtu  LS-Particle_0014.vtu  LS-Particle_0015.vtu  LS-Particle_0016.vtu  LS-Particle_0017.vtu  LS-Particle_0018.vtu  (+2 more)
apps/test/: LSSphereBouncing.cpp
apps/tutorial/: LSParticleFalling.cpp  LSParticleRolling.cpp
kernel/: LSObject.h  LSParticle.h  LSSolver.h  Packing.h  PeriodicBoundary.h  SolidInteraction.h
(+7 files in other folders)
